--- a/src/main/res/layout/layout_main.xml
+++ b/src/main/res/layout/layout_main.xml
@@ -12,6 +12,7 @@
             android:layout_width="30dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:cursorVisible="false"
             android:gravity="center_horizontal" />
         <TextView
             android:layout_width="wrap_content"
@@ -22,6 +23,7 @@
             android:layout_width="30dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:cursorVisible="false"
             android:gravity="center_horizontal" />
         <TextView
             android:layout_width="wrap_content"
@@ -32,6 +34,7 @@
             android:layout_width="30dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:cursorVisible="false"
             android:gravity="center_horizontal"/>
         <TextView
             android:layout_width="wrap_content"
@@ -42,6 +45,7 @@
             android:layout_width="30dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:cursorVisible="false"
             android:gravity="center_horizontal"/>
     </LinearLayout>
     <LinearLayout
