--- a/src/main/res/layout/layout_main.xml
+++ b/src/main/res/layout/layout_main.xml
@@ -13,6 +13,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:cursorVisible="false"
+            android:inputType="number"
+            android:maxLength="3"
             android:gravity="center_horizontal" />
         <TextView
             android:layout_width="wrap_content"
@@ -24,6 +26,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:cursorVisible="false"
+            android:inputType="number"
+            android:maxLength="3"
             android:gravity="center_horizontal" />
         <TextView
             android:layout_width="wrap_content"
@@ -35,6 +39,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:cursorVisible="false"
+            android:inputType="number"
+            android:maxLength="3"
             android:gravity="center_horizontal"/>
         <TextView
             android:layout_width="wrap_content"
@@ -46,6 +52,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:cursorVisible="false"
+            android:inputType="number"
+            android:maxLength="3"
             android:gravity="center_horizontal"/>
     </LinearLayout>
     <LinearLayout
@@ -74,45 +82,21 @@
         android:id="@+id/imageView"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:background="@color/disConnect"
-        android:layout_weight="1"/>
-    <LinearLayout
+        android:background="@color/disConnect"/>
+    <ToggleButton
+        android:id="@+id/toggleSensor"
+        android:checked="false"
+        android:textOn="TURN OFF SENSOR"
+        android:textOff="TURN ON SENSOR"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_weight="1"
-        android:gravity="center_horizontal">
-        <Button
-            android:id="@+id/forward"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:text="FORWARD"/>
-    </LinearLayout>
-    <LinearLayout
+        android:layout_height="wrap_content" />
+    <TextView
+        android:id="@+id/sensorData"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_weight="1">
-        <Button
-            android:id="@+id/turnLeft"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="LEFT"/>
-        <Button
-            android:id="@+id/turnRight"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="RIGHT"/>
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_weight="1"
-        android:gravity="center_horizontal">
-        <Button
-            android:id="@+id/back"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:text="BACK"/>
-    </LinearLayout>
+        android:layout_height="70dp" />
+    <me.apqx.raspberrypi.View.ControllerView
+        android:layout_gravity="center"
+        android:id="@+id/controllerView"
+        android:layout_width="250dp"
+        android:layout_height="250dp"/>
 </LinearLayout>
