--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#FF4081</color>
     <color name="disConnect">#ff0000</color>
     <color name="connect">#00ff00</color>
+    <color name="actionBarText">#ffffff</color>
 </resources>
