--- a/src/main/res/layout/layout_main.xml
+++ b/src/main/res/layout/layout_main.xml
@@ -105,9 +105,14 @@
         android:id="@+id/sensorData"
         android:layout_width="match_parent"
         android:layout_height="70dp" />
-    <me.apqx.raspberrypi.view.ControllerView
-        android:layout_gravity="center"
-        android:id="@+id/controllerView"
-        android:layout_width="250dp"
-        android:layout_height="250dp"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center">
+        <me.apqx.raspberrypi.view.ControllerView
+            android:layout_weight="1"
+            android:id="@+id/controllerView"
+            android:layout_width="250dp"
+            android:layout_height="250dp"/>
+    </LinearLayout>
 </LinearLayout>
