--- a/src/main/res/layout/layout_main.xml
+++ b/src/main/res/layout/layout_main.xml
@@ -5,125 +5,144 @@
     <me.apqx.raspberrypi.view.MyWebView
         android:id="@+id/webView"
         android:layout_width="match_parent"
-        android:layout_height="203dp" />
-    <LinearLayout
+        android:layout_height="203dp"/>
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:focusable="true"
-        android:focusableInTouchMode="true">
-        <EditText
-            android:id="@+id/ip_1"
-            android:hint="@string/ip"
-            android:layout_width="30dp"
+        android:layout_height="match_parent"
+        android:background="@color/colorPrimary">
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:cursorVisible="false"
-            android:inputType="number"
-            android:maxLength="3"
-            android:gravity="center_horizontal" />
-        <TextView
-            android:layout_width="wrap_content"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
+            android:visibility="gone">
+            <EditText
+                android:id="@+id/ip_1"
+                android:hint="@string/ip"
+                android:layout_width="30dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:cursorVisible="false"
+                android:inputType="number"
+                android:maxLength="3"
+                android:gravity="center_horizontal" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/point"/>
+            <EditText
+                android:id="@+id/ip_2"
+                android:hint="@string/ip"
+                android:layout_width="30dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:cursorVisible="false"
+                android:inputType="number"
+                android:maxLength="3"
+                android:gravity="center_horizontal" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/point"/>
+            <EditText
+                android:id="@+id/ip_3"
+                android:hint="@string/ip"
+                android:layout_width="30dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:cursorVisible="false"
+                android:inputType="number"
+                android:maxLength="3"
+                android:gravity="center_horizontal"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/point"/>
+            <EditText
+                android:id="@+id/ip_4"
+                android:hint="@string/ip"
+                android:layout_width="30dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:cursorVisible="false"
+                android:inputType="number"
+                android:maxLength="3"
+                android:gravity="center_horizontal"/>
+        </LinearLayout>
+        <LinearLayout
+            android:id="@+id/buttons"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/point"/>
-        <EditText
-            android:id="@+id/ip_2"
-            android:hint="@string/ip"
-            android:layout_width="30dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:cursorVisible="false"
-            android:inputType="number"
-            android:maxLength="3"
-            android:gravity="center_horizontal" />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/point"/>
-        <EditText
-            android:id="@+id/ip_3"
-            android:hint="@string/ip"
-            android:layout_width="30dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:cursorVisible="false"
-            android:inputType="number"
-            android:maxLength="3"
-            android:gravity="center_horizontal"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/point"/>
-        <EditText
-            android:id="@+id/ip_4"
-            android:hint="@string/ip"
-            android:layout_width="30dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:cursorVisible="false"
-            android:inputType="number"
-            android:maxLength="3"
-            android:gravity="center_horizontal"/>
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <Button
-            style="?android:attr/button"
-            android:id="@+id/connect"
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:text="@string/connect"
-            android:layout_weight="1"/>
-        <Button
-            style="?android:attr/button"
-            android:id="@+id/shutdown"
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:text="@string/shutdown"
-            android:layout_weight="1"/>
-        <Button
-            style="?android:attr/button"
-            android:id="@+id/disConnect"
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:text="@string/disconnect"
-            android:layout_weight="1"/>
-    </LinearLayout>
-    <ImageView
-        android:contentDescription="@string/connect_state"
-        android:id="@+id/imageView"
-        android:layout_width="match_parent"
-        android:layout_height="10dp"
-        android:background="@color/disConnect"/>
-    <ToggleButton
-        android:id="@+id/toggleSensor"
-        style="?android:attr/buttonStyleToggle"
-        android:checked="false"
-        android:textOn="TURN OFF SENSOR"
-        android:textOff="TURN ON SENSOR"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-    <TextView
-        android:id="@+id/sensorData"
-        android:layout_width="match_parent"
-        android:layout_height="40dp" />
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center">
-        <me.apqx.raspberrypi.view.ControllerView
-            android:layout_weight="4"
-            android:id="@+id/handControllerView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-        <me.apqx.raspberrypi.view.ServoView
-            android:id="@+id/servoView"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent" />
-        <me.apqx.raspberrypi.view.ControllerView
-            android:layout_weight="4"
-            android:id="@+id/drectionControllerView"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"/>
-    </LinearLayout>
+            android:layout_centerHorizontal="true">
+            <Button
+                style="?android:attr/button"
+                android:id="@+id/connect"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:text="@string/connect"
+                android:layout_weight="1"/>
+            <Button
+                style="?android:attr/button"
+                android:id="@+id/shutdown"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:text="@string/shutdown"
+                android:layout_weight="1"/>
+            <Button
+                style="?android:attr/button"
+                android:id="@+id/disConnect"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:text="@string/disconnect"
+                android:layout_weight="1"/>
+        </LinearLayout>
+        <ImageView
+            android:contentDescription="@string/connect_state"
+            android:id="@+id/imageView"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:background="@color/disConnect"
+            android:layout_below="@id/buttons"
+            android:layout_marginTop="10dp"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:background="@drawable/container"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
+            android:elevation="8dp"
+            android:orientation="vertical"
+            android:layout_below="@id/buttons">
+            <ToggleButton
+                android:id="@+id/toggleSensor"
+                style="?android:attr/buttonStyleToggle"
+                android:checked="false"
+                android:textOn="TURN OFF SENSOR"
+                android:textOff="TURN ON SENSOR"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="20dp"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical">
+                <me.apqx.raspberrypi.view.ControllerView
+                    android:layout_weight="4"
+                    android:id="@+id/handControllerView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+                <me.apqx.raspberrypi.view.ControllerView
+                    android:layout_weight="4"
+                    android:id="@+id/drectionControllerView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+
+            </LinearLayout>
+        </LinearLayout>
+    </RelativeLayout>
 </LinearLayout>
