--- a/src/main/res/layout/layout_main.xml
+++ b/src/main/res/layout/layout_main.xml
@@ -70,79 +70,78 @@
                 android:maxLength="3"
                 android:gravity="center_horizontal"/>
         </LinearLayout>
-        <LinearLayout
-            android:id="@+id/buttons"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true">
-            <Button
-                style="?android:attr/button"
-                android:id="@+id/connect"
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:content="@string/connect"
-                android:layout_weight="1"/>
-            <Button
-                style="?android:attr/button"
-                android:id="@+id/shutdown"
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:content="@string/shutdown"
-                android:layout_weight="1"/>
-            <Button
-                style="?android:attr/button"
-                android:id="@+id/disConnect"
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:content="@string/disconnect"
-                android:layout_weight="1"/>
-        </LinearLayout>
+
         <ImageView
             android:contentDescription="@string/connect_state"
             android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:background="@color/disConnect"
-            android:layout_below="@id/buttons"
             android:layout_marginTop="10dp"/>
-
-        <LinearLayout
+        <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:gravity="center"
-            android:background="@drawable/container"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="20dp"
-            android:elevation="8dp"
-            android:orientation="vertical"
-            android:layout_below="@id/buttons">
-            <ToggleButton
-                android:id="@+id/toggleSensor"
-                style="?android:attr/buttonStyleToggle"
-                android:checked="false"
-                android:textOn="TURN OFF SENSOR"
-                android:textOff="TURN ON SENSOR"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="20dp"/>
+            android:layout_margin="20dp">
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:gravity="center_vertical">
-                <me.apqx.raspberrypi.view.ControllerView
-                    android:layout_weight="4"
-                    android:id="@+id/handControllerView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-                <me.apqx.raspberrypi.view.ControllerView
-                    android:layout_weight="4"
-                    android:id="@+id/drectionControllerView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                android:gravity="center"
+                android:orientation="vertical"
+                android:layout_alignTop="@id/imageView">
+                <LinearLayout
+                    android:id="@+id/buttons"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true">
+                    <Button
+                        android:id="@+id/connect"
+                        android:layout_width="100dp"
+                        android:layout_height="wrap_content"
+                        android:text="@string/connect"
+                        android:background="@drawable/main_background_ripple"
+                        android:layout_weight="1"/>
+                    <Button
+                        android:id="@+id/shutdown"
+                        android:layout_width="100dp"
+                        android:layout_height="wrap_content"
+                        android:text="@string/shutdown"
+                        android:background="@drawable/main_background_ripple"
+                        android:layout_weight="1"/>
+                    <Button
+                        android:id="@+id/disConnect"
+                        android:layout_width="100dp"
+                        android:layout_height="wrap_content"
+                        android:text="@string/disconnect"
+                        android:background="@drawable/main_background_ripple"
+                        android:layout_weight="1"/>
+                </LinearLayout>
+                <ToggleButton
+                    android:id="@+id/toggleSensor"
+                    style="?android:attr/buttonStyleToggle"
+                    android:checked="false"
+                    android:textOn="@string/turn_off_sensor"
+                    android:textOff="@string/turn_on_sensor"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/main_background_ripple"/>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center_vertical">
+                    <me.apqx.raspberrypi.view.ControllerView
+                        android:layout_weight="4"
+                        android:id="@+id/handControllerView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+                    <me.apqx.raspberrypi.view.ControllerView
+                        android:layout_weight="4"
+                        android:id="@+id/drectionControllerView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
 
+                </LinearLayout>
             </LinearLayout>
-        </LinearLayout>
+
+        </android.support.v7.widget.CardView>
     </RelativeLayout>
 </LinearLayout>
